frontend_tests/negative/main_signature/go.mod
module example.com/renvotests/negative/main_signature

go 1.25
